--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles.css" />
     <script type="text/javascript" src="scriptTipCalc.js"></script>
     <title>Tip Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div id="main-container">
+      <header id="header">
+        <h1 id="title">Tip Calculator</h1>
+      </header>
+      <main>
+        <section id="bill-input">
+          <input
+            class="input-box"
+            type="number"
+            value=""
+            placeholder="Please enter bill amount"
+          />
+        </section>
+        <section id="tip-input">
+          <input
+            class="input-box"
+            type="number"
+            value=""
+            placeholder="Please enter tip percentage."
+          />
+        </section>
+        <section id="results-box">
+          <p id="tip-amount">Your tip is:</p>
+          <p id="bill-total">Your bill total is:</p>
+        </section>
+        <section id="calculation">
+          <button id="calculate" type="submit">Calculate</button>
+        </section>
+      </main>
+    </div>
+  </body>
 </html>
