--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
               type="number"
               value=""
               min="0"
-              placeholder="Please enter bill amount"
+              placeholder="Please enter bill amount."
             />
           </section>
           <section id="tip-input">
